portuguese error corrected xD

--- a/src/assets/locales/pt-br/translation.json
+++ b/src/assets/locales/pt-br/translation.json
@@ -7,7 +7,7 @@
     "GenBtn": "Gerar",
     "Paragraph": "parágrafos",
     "Words": "palavras",
-    "Sentences": "senteças",
+    "Sentences": "sentenças",
     "Copy": "Copiar para area de transferência"
   }
 }
